# sevengine-workshop

./: CMakeLists.txt  README.md
resources/: dynamic.frag  dynamic.vert  simple.frag  simple.vert  text.frag  text.vert  texture.frag  texture.vert
src/: Util.hh  main.cc
src/examples/: AbstractExample.cc  AbstractExample.hh  Examples.hh
src/examples/01_triangle/: Example.cc  Example.hh  ExampleTriangle.cc  ExampleTriangle.hh
src/examples/02_particles/: ExampleParticles.cc  ExampleParticles.hh
src/examples/02_rect/: Example.cc  Example.hh  ExampleRect.cc  ExampleRect.hh
src/examples/03_rectTextured/: Example.cc  Example.hh
src/examples/03_texturedRect/: ExampleTexturedRect.cc  ExampleTexturedRect.hh
src/examples/04_animatedTexturedRect/: ExampleAnimatedTexturedRect.cc  ExampleAnimatedTexturedRect.hh
src/examples/04_rectTextureAlpha/: Example.cc  Example.hh
src/examples/05_freeTypeFont/: ExampleFreeTypeFont.cc  ExampleFreeTypeFont.hh
src/examples/05_text/: Example.cc  Example.hh
src/examples/06_textureAtlasFont/: ExampleTextureAtlasFont.cc  ExampleTextureAtlasFont.hh
src/examples/07_multiTexture/: ExampleMultiTexture.cc  ExampleMultiTexture.hh
src/examples/08_lines/: ExampleLines.cc  ExampleLines.hh
src/examples/09_audio/: ExampleAudio.cc  ExampleAudio.hh
src/ui/: GLWidget.cc  GLWidget.hh  MainWindow.cc  MainWindow.hh  Window.cc  Window.hh  _GLWidget.cc  _GLWidget.hh  _Window.cc  _Window.hh
